# http_service

./: CMakeLists.txt  README.md  conanfile.txt
app/: CMakeLists.txt  main.cpp
sdk/: CMakeLists.txt
sdk/common/: CMakeLists.txt
sdk/common/cancel_controller/: CMakeLists.txt
sdk/common/cancel_controller/include/: Controller.h
sdk/common/cancel_controller/src/: Controller.cpp  stop_state_base.h  stop_state_impl.cpp  stop_state_impl.h  stop_state_registry.cpp  stop_state_registry.h
sdk/common/context/: CMakeLists.txt
sdk/common/context/include/: Context.h
sdk/common/context/src/: Context.cpp
sdk/common/logger/: CMakeLists.txt  Logger.h  LoggerBase.h  LoggerImpl.h  Utils.h
sdk/common/logger/include/: Logger.h  LoggerImpl.h  Severity.h  logger.h
sdk/common/logger/pch/: pch.h
sdk/common/logger/src/: LoggerImpl.cpp  LoggerImpl.h  Utils.h  logger.cpp
sdk/common/pipeline/: CMakeLists.txt
sdk/common/pipeline/include/: Pipeline.h
sdk/common/pipeline/src/: Pipeline.cpp
sdk/connection/: CMakeLists.txt
sdk/connection/include/: Connection.h
sdk/connection/src/: Connection.cpp
sdk/connection/src/impl/: Impl.cpp  Impl.h
sdk/connection/src/job/: job_base.cpp  job_base.h  read_job.h  read_job_base.cpp  read_job_base.h
sdk/service/: CMakeLists.txt
sdk/service/include/: Gateway.h  IService.h
sdk/service/src/acceptor/: Acceptor.cpp  Acceptor.h
sdk/service/src/core/: Core.cpp  Core.h
sdk/service/src/gateway/: Gateway.cpp
sdk/session/: CMakeLists.txt
sdk/session/include/: ISession.h  Session.h  SessionBase.h  SessionPeerBase.h
sdk/session/src/: HandleRequest.h  SendOp.h  SessionBase.cpp
tests/: CMakeLists.txt  main.cpp
tests/controller/: CMakeLists.txt  controller.cpp
